Updated WDL generation, upgrade to Barclay 4.0. (#6800)

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ repositories {
 
 final htsjdkVersion = System.getProperty('htsjdk.version','2.23.0')
 final picardVersion = System.getProperty('picard.version','2.23.3')
-final barclayVersion = System.getProperty('barclay.version','3.0.0')
+final barclayVersion = System.getProperty('barclay.version','4.0.0')
 final sparkVersion = System.getProperty('spark.version', '2.4.5')
 final scalaVersion = System.getProperty('scala.version', '2.11')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
@@ -746,7 +746,7 @@ task gatkTabComplete(type: Javadoc, dependsOn: classes) {
     options.addStringOption("caller-post-arg-max-occurs", "1 1 1 1 1 1 1 1 1 1")
 }
 
-def getWLDInputJSONTestFileNameFromWDLName(File wdlName) {
+def getWDLInputJSONTestFileNameFromWDLName(File wdlName) {
     String fileWithoutExt = wdlName.name.take(wdlName.name.lastIndexOf('.'))
     return new File (wdlName.getParentFile(), fileWithoutExt + "Inputs.json").getAbsolutePath()
 }
@@ -758,7 +758,7 @@ task gatkWDLGen(type: Javadoc, dependsOn: classes) {
     doFirst {
         // make sure the output folder exists or we can create it
         if (!gatkWDLDir.exists() && !gatkWDLDir.mkdirs()) {
-            throw new GradleException(String.format("Failure creating folder (%s) for GATK DL output in task (%s)",
+            throw new GradleException(String.format("Failure creating folder (%s) for GATK WDL output in task (%s)",
                     gatkWDLDir.getAbsolutePath(),
                     it.name));
         }
@@ -788,10 +788,18 @@ task gatkWDLGen(type: Javadoc, dependsOn: classes) {
 
     // the wdl doclet will populate the test JSON input files with the name of a dummy
     // file in this location, in order to satisfy cromwell's attempts to localize inputs and outputs
-    options.addStringOption("build-dir", System.getenv("TRAVIS_BUILD_DIR") ?: ".")
+    options.addStringOption("build-dir", System.getenv("TRAVIS_BUILD_DIR") ?: new File(".").getAbsolutePath())
 }
 
 task gatkWDLGenValidation(dependsOn: [gatkWDLGen, shadowJar]) {
+    doFirst {
+        // running this task requires a local cromwell installation, with environment variables CROMWELL_JAR,
+        // WOMTOOL_JAR set to the jar locations
+        if (System.getenv('CROMWELL_JAR') == null || System.getenv('WOMTOOL_JAR') == null) {
+            throw new GradleException("Running this task requires the CROMWELL_JAR and WOMTOOL_JAR environment variables to be set")
+        }
+    }
+
     def execWDLValidation = { validateWDL ->
         println "Executing: $validateWDL"
         try {
@@ -811,8 +819,8 @@ task gatkWDLGenValidation(dependsOn: [gatkWDLGen, shadowJar]) {
         def wdlFiles = fileTree(dir: wdlGenFolder).filter {
             f -> !f.getAbsolutePath().endsWith(".html") && !f.getAbsolutePath().endsWith(".json")
         }
+        final womtoolLocation = System.getenv('WOMTOOL_JAR')
         wdlFiles.any() { wdlFile ->
-            final womtoolLocation = System.getenv('WOMTOOL_JAR')
             final validateWDLCommand = "java -jar $womtoolLocation validate $wdlFile"
             execWDLValidation(validateWDLCommand)
         }
@@ -821,16 +829,25 @@ task gatkWDLGenValidation(dependsOn: [gatkWDLGen, shadowJar]) {
         wdlFiles = fileTree(dir: wdlGenFolder).filter {
             f -> f.getAbsolutePath().endsWith("AllArgsTest.wdl")
         }
-        wdlFiles.any() { wdlFile ->
-            final cromwellLocation = System.getenv('CROMWELL_JAR')
-            final testInputJSON = getWLDInputJSONTestFileNameFromWDLName(wdlFile)
-            final runWDLCommand = "java -jar $cromwellLocation run --inputs $testInputJSON $wdlFile"
-            // the test JSON input file is populated by the WDL gen process with this dummy file name
-            // to satisfy cromwell's attempt to de/localize input files
-            def buildDir = System.getenv("TRAVIS_BUILD_DIR") ?: "."
-            final createDummyTestInputFile = "touch $buildDir/dummyWDLTestFile"
-            execWDLValidation(createDummyTestInputFile)
-            execWDLValidation(runWDLCommand)
+
+        // the test JSON input file is populated by the WDL gen process with the name of this dummy file
+        // to satisfy cromwell's attempt to de/localize input/output files
+        def buildDir = System.getenv("TRAVIS_BUILD_DIR") ?: new File(".").getAbsolutePath()
+        final dummyWDLTestFileName = "$buildDir/dummyWDLTestFile"
+        final File dummyWDLTestFile = file(dummyWDLTestFileName)
+        final cromwellLocation = System.getenv('CROMWELL_JAR')
+        try {
+            wdlFiles.any() { wdlFile ->
+                final testInputJSON = getWDLInputJSONTestFileNameFromWDLName(wdlFile)
+                final runWDLCommand = "java -jar $cromwellLocation run --inputs $testInputJSON $wdlFile"
+                execWDLValidation("touch $dummyWDLTestFileName")
+                execWDLValidation(runWDLCommand)
+            }
+        } finally {
+            // delete the dummy test file and the 'cromwell-executions' directory left behind by cromwell
+            dummyWDLTestFile.delete()
+            file("$buildDir/cromwell-executions").deleteDir()
+            file("$buildDir/cromwell-workflow-logs").deleteDir()
         }
     }
 
