adding travis_wait

--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,7 @@ script:
 # run a basic sanity check to be sure that gatk doesn't explode
 # run tests
 # Because the docker build for GATK doesn't include the test code or the src files we have to manually collect them into a location to be mounted in for performing tests
-- if [[ $TRAVIS_EVENT_TYPE == cron ]]; then
+- travis wait 40 if [[ $TRAVIS_EVENT_TYPE == cron ]]; then
     echo "Not running any tests for nightly builds";
   elif [[ $TEST_TYPE == wdlGen ]]; then
     ./gradlew gatkWDLGenValidation;
