--- a/.travis.yml
+++ b/.travis.yml
@@ -149,8 +149,12 @@ script:
     echo "Running CNN WDL";
     travis_wait 60 sudo bash scripts/cnn_variant_cromwell_tests/run_cnn_variant_wdl.sh;
   elif [[ $RUN_VARIANTSTORE_WDL == true ]]; then
-    echo "Running variantstore WDL";
-    travis_wait 60 sudo bash scripts/variantstore_cromwell_tests/run_variantstore_wdl.sh;
+    if [[ $TRAVIS_SECURE_ENV_VARS == true ]]; then
+      echo "Running variantstore WDL";
+      travis_wait 60 sudo bash scripts/variantstore_cromwell_tests/run_variantstore_wdl.sh;
+    else
+      echo "Skipping variantstore tests since google cloud authentication is required.";
+    fi;
   elif [[ $TEST_DOCKER == true ]]; then
     echo "Building docker image and running appropriate tests..." ;
     if [ ${TRAVIS_PULL_REQUEST} != false ]; then
