--- a/scripts/gatkcondaenv.yml.template
+++ b/scripts/gatkcondaenv.yml.template
@@ -32,6 +32,7 @@ dependencies:
                                     #   verify that this is using numpy compiled against MKL (e.g., by checking tensorflow.pywrap_tensorflow.IsMklEnabled())
 - conda-forge::scipy=1.0.0          # do not update, this will break a scipy.misc.logsumexp import (deprecated in scipy=1.0.0) in pymc3=3.1
 - conda-forge::pymc3=3.1            # do not update, this will break gcnvkernel
+- conda-forge::h5py=2.10.0          # required by keras 2.2.4
 - conda-forge::keras=2.2.4          # updated from pip-installed 2.2.0, which caused various conflicts/clobbers of conda-installed packages
                                     #   conda-installed 2.2.4 appears to be the most recent version with a consistent API and without conflicts/clobbers
                                     #   if you wish to update, note that versions of conda-forge::keras after 2.2.5
