--- a/scripts/gatkcondaenv.yml.template
+++ b/scripts/gatkcondaenv.yml.template
@@ -23,15 +23,14 @@ dependencies:
 - pip=20.0.2                        # specifying channel may cause a warning to be emitted by conda
 - conda-forge::mkl=2019.5           # MKL typically provides dramatic performance increases for theano, tensorflow, and other key dependencies
 - conda-forge::mkl-service=2.3.0
-- conda-forge::numpy=1.17.5         # do not update, this will break scipy=0.19.1
-                                    #   verify that numpy is compiled against MKL (e.g., by checking *_mkl_info using numpy.show_config())
+- conda-forge::numpy=1.19.4         #   verify that numpy is compiled against MKL (e.g., by checking *_mkl_info using numpy.show_config())
                                     #   and that it is used in tensorflow, theano, and other key dependencies
 - conda-forge::theano=1.0.4         # it is unlikely that new versions of theano will be released
                                     #   verify that this is using numpy compiled against MKL (e.g., by the presence of -lmkl_rt in theano.config.blas.ldflags)
 - defaults::tensorflow=1.15.0       # update only if absolutely necessary, as this may cause conflicts with other core dependencies
                                     #   verify that this is using numpy compiled against MKL (e.g., by checking tensorflow.pywrap_tensorflow.IsMklEnabled())
-- conda-forge::scipy=1.0.0          # do not update, this will break a scipy.misc.logsumexp import (deprecated in scipy=1.0.0) in pymc3=3.1
-- conda-forge::pymc3=3.1            # do not update, this will break gcnvkernel
+- conda-forge::scipy=1.5.3
+- conda-forge::pymc3=3.9.2          # do not update, this will break gcnvkernel
 - conda-forge::h5py=2.10.0          # required by keras 2.2.4
 - conda-forge::keras=2.2.4          # updated from pip-installed 2.2.0, which caused various conflicts/clobbers of conda-installed packages
                                     #   conda-installed 2.2.4 appears to be the most recent version with a consistent API and without conflicts/clobbers
@@ -41,6 +40,7 @@ dependencies:
 - conda-forge::scikit-learn=0.22.2
 - conda-forge::matplotlib=3.2.1
 - conda-forge::pandas=1.0.3
+- conda-forge::contextvars=2.4
 
 # core R dependencies; these should only be used for plotting and do not take precedence over core python dependencies!
 - r-base=3.6.2
