--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -30,7 +30,7 @@ workflows:
      primaryDescriptorPath: /scripts/cnn_variant_wdl/cram2model.wdl
      testParameterFiles:
      - /scripts/cnn_variant_wdl/jsons/cram2model.json
-   - name: ImportGenomes
+   - name: importgenomes
      subclass: WDL
      primaryDescriptorPath: /scripts/variantstore/wdl/ImportGenomes.wdl
      testParameterFiles:
