Updated some other files from BSD-3 to Apache 2.0

--- a/build.gradle
+++ b/build.gradle
@@ -907,7 +907,7 @@ def basePomConfiguration = {
 
     licenses {
         license {
-            name 'BSD 3-Clause'
+            name 'Apache 2.0'
             url 'https://github.com/broadinstitute/gatk/blob/master/LICENSE.TXT'
             distribution 'repo'
         }
