--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -30,6 +30,11 @@ workflows:
      primaryDescriptorPath: /scripts/cnn_variant_wdl/cram2model.wdl
      testParameterFiles:
      - /scripts/cnn_variant_wdl/jsons/cram2model.json
+   - name: ImportGenomes
+     subclass: WDL
+     primaryDescriptorPath: /scripts/variantstore/wdl/ImportGenomes.wdl
+     testParameterFiles:
+       - empty.json
    - name: funcotator
      subclass: WDL
      primaryDescriptorPath: /scripts/funcotator_wdl/funcotator.wdl
